--- a/kind.yaml
+++ b/kind.yaml
@@ -1,6 +1,6 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: local
+name: kind
 networking:
   # the default CNI will not be installed
   disableDefaultCNI: true
